# xrpfi-verif-copilot

./: .env.example  .env.txt  .gitignore  BUILD_LOG.tsv  DEMO_SCRIPT.md  DEPLOYMENT_ADDRESSES.md  FEEDBACK.md  Makefile  README.md  REALITY_MATRIX.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  VERIFICATION_REPORT.md  X_POST_DRAFT.md  ZERO_G_STORAGE_STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: XRPFiINFT.sol  deploy.py
contracts/storage_upload/: package-lock.json  package.json  upload.mjs
demo/: judge_demo.py  run_demo.py
docs/: JUDGES_CHECKLIST.md  JUDGE_HANDOUT.md  architecture.md
scripts/: capture_screenshot.py  check_0g_balance.py  register_ens.py  update_deployment.py
src/: __init__.py  config.py
src/agents/: __init__.py
src/agents/mint_helper/: __init__.py  agent.py
src/agents/yield_router/: __init__.py  agent.py
src/contracts/: __init__.py  decision_log.py
src/gensyn/: __init__.py
src/gensyn/node_a/: __init__.py  publisher.py
src/gensyn/node_b/: __init__.py  publisher.py  subscriber.py
src/integrations/: __init__.py
src/integrations/defi_venues/: __init__.py  catalog.py
src/integrations/ens/: __init__.py  resolver.py  resolver_b.py
src/integrations/fassets/: __init__.py  client.py
src/integrations/fdc/: __init__.py  client.py
src/integrations/ftso/: __init__.py  client.py
src/integrations/uniswap/: __init__.py  client.py
src/integrations/zero_g/: __init__.py  client.py  inft.py
src/policies/: __init__.py  rebalance_policy.py
src/session/: __init__.py  ledger.py
tests/: LANE_B_FEEDBACK_NOTES.md  __init__.py  conftest.py  test_axl_receipt.py  test_decision_log.py  test_ens.py  test_fassets.py  test_fdc.py  test_ftso.py  test_integration.py  test_mint_helper.py  test_rebalance_policy.py  test_session_ledger.py  test_uniswap.py  test_yield_router.py  test_zero_g.py
web/: __init__.py  app.js  index.html  server.py  styles.css
