[project]
name = "xrpfi-verif-copilot"
version = "2.3.0"
description = "XRPFi Verifiable Copilot — 2-agent system for XRP holders entering Flare DeFi"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Flare AI Kit (pinned commit f29d0a7 — 2026-05-04)
    "flare-ai-kit @ git+https://github.com/flare-foundation/flare-ai-kit.git@f29d0a7dc8ae2066c414df040d92f61fc8dd521f",
    # Agent framework
    "google-adk>=1.19.0",
    "google-genai>=1.51.0",
    # Flare / EVM
    "web3>=7.14.0",
    # Data validation
    "pydantic>=2.12.4",
    # HTTP
    "httpx>=0.28.1",
    # Logging + observability
    "structlog>=25.5.0",
    # Retry
    "tenacity>=9.0.0,<10.0.0",
    # ENS namehash is implemented in-tree (src/integrations/ens/resolver.py)
    # eth-ens-namehash is not on PyPI; the web3.py keccak implementation is used instead
    # 0G storage (via HTTP API)
    # (0G Python SDK — imported via HTTP client; no pip package yet)
    # XRPL (for XRP address validation)
    "xrpl-py>=4.0.0",
    # Async support
    "anyio>=4.9.0",
    # Testing
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.0",
    # Linting / type checking
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "py-solc-x>=2.0.5",
]

[project.scripts]
xrpfi-judge = "demo.judge_demo:main"

[project.optional-dependencies]
dev = [
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "N802", "N817", "SIM105", "SIM108", "B017", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["^tests/", "^demo/", "^web/", "^scripts/", "^contracts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
